# DBoW2

./: .gitmodules  CMakeLists.txt  README.md
CudaSift/: CMakeLists.txt  cudaSiftD.cu  cudaSiftH.cu  mainSift.cpp
demo/: load_orb.cpp  load_sift.cpp  make_orb_vocabulary.cpp  make_sift_vocabulary.cpp  make_sift_vocabulary_test.cpp  yaml_to_txt.cpp  yaml_to_txt_test.cpp
include/DBoW2/: DBoW2.h  TemplatedVocabulary.h
